# docstructor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DOKUMENTATIONS_GOVERNANCE_TOOL.md  STRUCTURE_RULES.yaml  VALIDATE_DOCS_JSON_SCHEMA.json  VALIDATE_DOCS_PRECOMMIT_CI_DESIGN.md
docs/prompts/: REFACTORING_ROADMAP.md  REFACTORING_STRUCTURE_RULES.md
scripts/: validate_docs_structure.py
src/: validate_docs_structure.py
tests/: test_validate_docs_structure.py
